--- a/index.html
+++ b/index.html
@@ -3,68 +3,94 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acceso VIP Exclusivo</title>
+  <title>Acceso VIP Exclusivo - Super Bono Especial</title>
+  <!-- Google Font Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(90deg, #ff4b5c, #00c851);
+      color: #ffffff;
       display: flex;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       min-height: 100vh;
-      background: #fff;
-      color: #000;
-      font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
     }
     .container {
-      max-width: 600px;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 2rem;
+      align-items: center;
+      justify-items: center;
+      max-width: 1200px;
+      width: 100%;
     }
     .offer {
-      font-size: 1.2rem;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      font-weight: 700;
       text-transform: uppercase;
-      letter-spacing: 2px;
-      margin-bottom: 1rem;
+      letter-spacing: 1px;
     }
     .hero {
-      font-size: 2rem;
-      text-transform: uppercase;
-      letter-spacing: 3px;
+      font-size: 2.5rem;
+      font-weight: 700;
       line-height: 1.2;
+      text-transform: uppercase;
+      letter-spacing: 2px;
       margin-bottom: 1.5rem;
+      max-width: 600px;
+    }
+    .btn {
+      display: inline-block;
+      background: #25D366;
+      color: #ffffff;
+      font-size: 1rem;
+      font-weight: 700;
+      padding: 0.75rem 2rem;
+      border-radius: 30px;
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      transition: transform 0.2s ease;
+    }
+    .btn:hover {
+      transform: scale(1.05);
     }
     img {
       max-width: 100%;
       height: auto;
-      margin-bottom: 2rem;
+      border-radius: 10px;
     }
-    .btn {
-      display: inline-block;
-      padding: 15px 30px;
-      text-decoration: none;
-      background: #25D366;
-      color: #fff;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      border-radius: 5px;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background: #128C7E;
+    @media (min-width: 768px) {
+      .container {
+        grid-template-columns: 1fr 1fr;
+        text-align: left;
+        justify-items: start;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <p class="offer">¡OFERTA POR TIEMPO LIMITADO!</p>
-    <img src="logo.jpg" alt="Golden Casino" />
-    <h1 class="hero">ACCESO VIP EXCLUSIVO ¡SUPER B0N0 DEL 50% EN TU PRIMER DEPOS1T0! ATENCI0N 24 HOR4S ESCRIBINOS APRETANDO EL BOTÓN DE ABAJO</h1>
-    <a href="https://wa.link/marcosgreen2" class="btn">OBTENER MI B0NUS AHORA</a>
+    <div class="text-block">
+      <p class="offer">¡OFERTA POR TIEMPO LIMITADO!</p>
+      <h1 class="hero">
+        ACCESO VIP EXCLUSIVO<br>
+        ¡SUPER BONO DEL 50% EN TU PRIMER DEPÓSITO!<br>
+        ATENCIÓN 24 HORAS<br>
+        ESCRÍBENOS APRETANDO EL BOTÓN
+      </h1>
+      <a href="https://wa.link/marcosgreen2" class="btn">Obtener mi bono ahora</a>
+    </div>
+    <div class="image-block">
+      <img src="logo.jpg" alt="Golden Casino" />
+    </div>
   </div>
 </body>
 </html>
