--- a/index.html
+++ b/index.html
@@ -1,96 +1,117 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acceso VIP Exclusivo - Super Bono Especial</title>
-  <!-- Google Font Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Red Green - Super Bono 50% Acceso VIP</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(90deg, #ff4b5c, #00c851);
-      color: #ffffff;
+      background-color: #014d2c;
+      color: #fff;
+      text-align: center;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
-      text-align: center;
       padding: 20px;
     }
     .container {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 2rem;
-      align-items: center;
-      justify-items: center;
-      max-width: 1200px;
+      max-width: 480px;
       width: 100%;
     }
-    .offer {
-      background: rgba(0, 0, 0, 0.3);
-      padding: 0.5rem 1rem;
-      border-radius: 20px;
-      font-size: 0.9rem;
+    .logo {
+      width: 120px;
+      margin: 0 auto 20px;
+      display: block;
+    }
+    .title-white {
+      font-size: 1.2rem;
       font-weight: 700;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+      text-transform: uppercase;
+    }
+    .promo {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #FFD62E;
+      line-height: 1.2;
+      margin-bottom: 8px;
       text-transform: uppercase;
       letter-spacing: 1px;
     }
-    .hero {
-      font-size: 2.5rem;
+    .promo-underline {
+      width: 60%;
+      height: 4px;
+      background-color: #FFD62E;
+      margin: 4px auto 20px;
+      border-radius: 2px;
+    }
+    .neon {
+      font-size: 1.5rem;
       font-weight: 700;
-      line-height: 1.2;
+      color: #00FF7F;
+      text-shadow: 0 0 8px #00FF7F, 0 0 16px #00FF7F;
+      margin-bottom: 20px;
       text-transform: uppercase;
-      letter-spacing: 2px;
-      margin-bottom: 1.5rem;
-      max-width: 600px;
+      letter-spacing: 1px;
+      line-height: 1.2;
+    }
+    .info-pill {
+      display: inline-block;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 10px 15px;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      margin-bottom: 20px;
+      text-transform: uppercase;
     }
     .btn {
-      display: inline-block;
-      background: #25D366;
-      color: #ffffff;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(90deg, #25D366, #128C7E);
+      color: #fff;
+      padding: 15px 25px;
+      border-radius: 30px;
       font-size: 1rem;
       font-weight: 700;
-      padding: 0.75rem 2rem;
-      border-radius: 30px;
       text-decoration: none;
       text-transform: uppercase;
       letter-spacing: 1px;
       transition: transform 0.2s ease;
+      margin-bottom: 20px;
     }
     .btn:hover {
       transform: scale(1.05);
     }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-    @media (min-width: 768px) {
-      .container {
-        grid-template-columns: 1fr 1fr;
-        text-align: left;
-        justify-items: start;
-      }
+    .btn svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      fill: #fff;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="text-block">
-      <p class="offer">¡OFERTA POR TIEMPO LIMITADO!</p>
-      <h1 class="hero">
-        ACCESO VIP EXCLUSIVO<br>
-        ¡SUPER BONO DEL 50% EN TU PRIMER DEPÓSITO!<br>
-        ATENCIÓN 24 HORAS<br>
-        ESCRÍBENOS APRETANDO EL BOTÓN
-      </h1>
-      <a href="https://wa.link/marcosgreen2" class="btn">Obtener mi bono ahora</a>
-    </div>
-    <div class="image-block">
-      <img src="logo.jpg" alt="Golden Casino" />
-    </div>
+    <img src="logo.png" alt="Red Green Logo" class="logo">
+    <div class="title-white">ACCESO VIP EXCLUSIVO</div>
+    <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
+    <div class="promo-underline"></div>
+    <div class="neon">ATENCION 24 HOR4S</div>
+    <div class="info-pill">ESCRIBINOS APRETANDO EL BOTON DE ABAJO</div>
+    <a href="https://wa.link/marcosgreen2" class="btn">
+      <svg viewBox="0 0 24 24"><path d="M16.24 14.01c-.27-.13-1.6-.79-1.84-.88-.24-.09-.42-.13-.6.13-.18.27-.7.88-.86 1.06-.16.18-.32.2-.6.07-.27-.13-1.14-.42-2.17-1.33-.8-.71-1.34-1.6-1.5-1.87-.16-.27-.02-.42.12-.55.12-.12.27-.32.4-.48.13-.16.18-.27.27-.45.09-.18.04-.34-.02-.48-.07-.13-.6-1.44-.82-1.98-.22-.52-.44-.45-.6-.46-.16-.01-.34-.01-.52-.01-.18 0-.48.07-.73.34-.24.27-.93.91-.93 2.22s.95 2.57 1.08 2.75c.13.18 1.87 2.86 4.53 4.01.63.27 1.12.43 1.5.55.63.19 1.2.16 1.65.1.5-.07 1.6-.65 1.83-1.28.23-.63.23-1.17.16-1.28-.07-.11-.27-.18-.57-.31z"/><path d="M12 2.04C6.49 2.04 2.04 6.49 2.04 12S6.49 21.96 12 21.96 21.96 17.51 21.96 12 17.51 2.04 12 2.04zm0 18.57c-4.75 0-8.61-3.86-8.61-8.61 0-4.75 3.86-8.61 8.61-8.61 4.75 0 8.61 3.86 8.61 8.61 0 4.75-3.86 8.61-8.61 8.61z"/></svg>
+      OBTENER MI BONUS AHORA
+    </a>
   </div>
 </body>
 </html>
