--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Red Green Logo" class="logo">
+    <img src="logo.jpg" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
     <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
     <div class="promo-underline"></div>
