--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       text-decoration: none;
       text-transform: uppercase;
       letter-spacing: 1px;
-      transition: transform 0.2s ease;
       margin-bottom: 20px;
+      animation: pulse 2s ease-in-out infinite;
     }
     .btn:hover {
-      transform: scale(1.05);
+      transform: scale(1.08);
     }
     .btn svg {
       width: 20px;
@@ -98,11 +98,15 @@
       margin-right: 10px;
       fill: #fff;
     }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="logo.jpg" alt="Red Green Logo" class="logo">
+    <img src="logo.png" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
     <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
     <div class="promo-underline"></div>
