--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
       width: 100%;
     }
     .logo {
-      width: 120px;
+      width: 144px; /* 20% más grande */
       margin: 0 auto 20px;
       display: block;
+      border-radius: 50%; /* Redondear */
     }
     .title-white {
       font-size: 1.2rem;
