--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #014d2c;
+      /* Gradient from white to green */
+      background: linear-gradient(180deg, #ffffff 0%, #014d2c 100%);
       color: #fff;
       text-align: center;
       min-height: 100vh;
@@ -120,3 +121,4 @@
   </div>
 </body>
 </html>
+
