--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       width: 100%;
     }
     .logo {
-      width: 144px; /* 20% más grande */
+      width: 180px; /* 50% más grande que el original */
+      height: auto; /* Mantener proporción */
       margin: 0 auto 20px;
       display: block;
-      border-radius: 50%; /* Redondear */
+      border-radius: 50%; /* Redondear sin deformar */
     }
     .title-white {
       font-size: 1.2rem;
@@ -121,4 +122,3 @@
   </div>
 </body>
 </html>
-
