--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="container">
     <img src="logo.jpg" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
-    <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
+    <div class="promo">¡SUPER BONO EN TU PRIMER DEPOSITO!</div>
     <div class="promo-underline"></div>
     <div class="neon">ATENCION 24 HOR4S</div>
     <div class="info-pill">ESCRIBINOS APRETANDO EL BOTON DE ABAJO</div>
