--- a/index.html
+++ b/index.html
@@ -109,9 +109,14 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.jpg" alt="Red Green Logo" class="logo">
+    <div class="top-bar">
+      <div class="item"><span class="icon">🎧</span>Atención 24/7</div>
+      <div class="item"><span class="icon">💸</span>Pagos al instante</div>
+      <div class="item"><span class="icon">⏳</span>Jugá responsable (+18)</div>
+    </div>
+    <img src="logo.png" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
-    <div class="promo">¡SUPER BONO EN TU PRIMERA CARGA!</div>
+    <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
     <div class="promo-underline"></div>
     <div class="neon">ATENCION 24 HOR4S</div>
     <div class="info-pill">ESCRIBINOS APRETANDO EL BOTON DE ABAJO</div>
