--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ases del Norte - Super Bono Acceso VIP</title>
+  <title>Red Green - Super Bono 50% Acceso VIP</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -25,8 +25,23 @@
       max-width: 480px;
       width: 100%;
     }
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      color: rgba(255, 255, 255, 0.6);
+      font-size: 0.8rem;
+      margin-bottom: 15px;
+    }
+    .top-bar .item {
+      display: flex;
+      align-items: center;
+    }
+    .top-bar .icon {
+      margin-right: 5px;
+      font-size: 1rem;
+    }
     .logo {
-      width: 180px; /* 50% más grande que el original */
+      width: 180px; /* 50% más grande */
       height: auto; /* Mantener proporción */
       margin: 0 auto 20px;
       display: block;
@@ -114,7 +129,7 @@
       <div class="item"><span class="icon">💸</span>Pagos al instante</div>
       <div class="item"><span class="icon">⏳</span>Jugá responsable (+18)</div>
     </div>
-    <img src="logo.png" alt="Red Green Logo" class="logo">
+    <img src="logo.jpg" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
     <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
     <div class="promo-underline"></div>
@@ -127,3 +142,4 @@
   </div>
 </body>
 </html>
+
