--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     .top-bar {
       display: flex;
       justify-content: space-between;
-      color: rgba(255, 255, 255, 0.6);
-      font-size: 0.8rem;
+      color: #a8e6cf;
+      font-size: 0.75rem;
+      font-weight: 400;
+      font-family: 'Poppins', sans-serif;
       margin-bottom: 15px;
     }
     .top-bar .item {
@@ -38,7 +40,8 @@
     }
     .top-bar .icon {
       margin-right: 5px;
-      font-size: 1rem;
+      font-size: 0.9rem;
+      color: #a8e6cf;
     }
     .logo {
       width: 180px; /* 50% más grande */
