--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     .top-bar {
       display: flex;
       justify-content: space-between;
-      color: #a8e6cf;
-      font-size: 0.75rem;
-      font-weight: 400;
+      color: rgba(0, 255, 127, 0.6);
+      font-size: 0.8rem;
+      font-weight: 600;
       font-family: 'Poppins', sans-serif;
       margin-bottom: 15px;
     }
@@ -40,8 +40,8 @@
     }
     .top-bar .icon {
       margin-right: 5px;
-      font-size: 0.9rem;
-      color: #a8e6cf;
+      font-size: 1rem;
+      color: rgba(0, 255, 127, 0.6);
     }
     .logo {
       width: 180px; /* 50% más grande */
@@ -128,9 +128,9 @@
 <body>
   <div class="container">
     <div class="top-bar">
-      <div class="item"><span class="icon">-</span>Atención 24/7</div>
-      <div class="item"><span class="icon">-</span>Pagos al instante</div>
-      <div class="item"><span class="icon">-</span>Jugá responsable (+18)</div>
+      <div class="item"><span class="icon">🎧</span>Atención 24/7</div>
+      <div class="item"><span class="icon">💸</span>Pagos al instante</div>
+      <div class="item"><span class="icon">⏳</span>Jugá responsable (+18)</div>
     </div>
     <img src="logo.jpg" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
@@ -139,7 +139,7 @@
     <div class="neon">ATENCION 24 HOR4S</div>
     <div class="info-pill">ESCRIBINOS APRETANDO EL BOTON DE ABAJO</div>
     <a href="https://wa.link/marcosgreen2" class="btn">
-      <svg viewBox="0 0 24 24"><path d="M16.24 14.01c-.27-.13-1.6-.79-1.84-.88-.24-.09-.42-.13-.6.13-.18.27-.7.88-.86 1.06-.16.18-.32.2-.6.07-.27-.13-1.14-.42-2.17-1.33-.8-.71-1.34-1.6-1.5-1.87-.16-.27-.02-.42.12-.55.12-.12.27-.32.4-.48.13-.16.18-.27.27-.45.09-.18.04-.34-.02-.48-.07-.13-.6-1.44-.82-1.98-.22-.52-.44-.45-.6-.46-.16-.01-.34-.01-.52-.01-.18 0-.48.07-.73.34-.24.27-.93.91-.93 2.22s.95 2.57 1.08 2.75c.13.18 1.87 2.86 4.53 4.01.63.27 1.12.43 1.5.55.63.19 1.2.16 1.65.1.5-.07 1.6-.65 1.83-1.28.23-.63.23-1.17.16-1.28-.07-.11-.27-.18-.57-.31z"/><path d="M12 2.04C6.49 2.04 2.04 6.49 2.04 12S6.49 21.96 12 21.96 21.96 17.51 21.96 12 17.51 2.04 12 2.04zm0 18.57c-4.75 0-8.61-3.86-8.61-8.61 0-4.75 3.86-8.61 8.61-8.61 4.75 0 8.61 3.86 8.61 8.61 0 4.75-3.86 8.61-8.61 8.61z"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M16.24 14.01c-.27-.13-1.6-.79-1.84-.88-.24-.09-.42-.13-.6.13-.18.27-.7.88-.86 1.06-.16.18-.32.2-.6.07-.27-.13-1.14-.42-2.17-1.33-.8-.71-1.34-1.6-1.5-1.87-.16-.27-.02-.42.12-.55.12-.12.27-.32.4-.48.13-.16.18-.27.27-.45.09-.18.04-.34-.02-.48-.07-.13-.6-1.44-.82-1.98-.22-.52-.44-.45-.6-.46-.16-.01-.34-.01-.52-.01-.18 0-.48.07-.73.34-.24.27-.93.91-.93 2.22s.95 2.57 1.08 2.75c.13.18 1.87 2.86 4.53 4.01.63.27 1.12.43 1.5.55.63.19 1.2.16 1.65.1.5-.07 1.6-.65 1.83-1.28.23-.63.23-1.17.16-1.28-.07-.11[]."/></svg>
       OBTENER MI BONUS AHORA
     </a>
   </div>
