--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 <body>
   <div class="container">
     <div class="top-bar">
-      <div class="item"><span class="icon">🎧</span>Atención 24/7</div>
-      <div class="item"><span class="icon">💸</span>Pagos al instante</div>
-      <div class="item"><span class="icon">⏳</span>Jugá responsable (+18)</div>
+      <div class="item">Atención 24/7</div>
+      <div class="item">Pagos al instante</div>
+      <div class="item">Jugá responsable (+18)</div>
     </div>
     <img src="logo.jpg" alt="Red Green Logo" class="logo">
     <div class="title-white">ACCESO VIP EXCLUSIVO</div>
