--- a/index.html
+++ b/index.html
@@ -2,147 +2,80 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Red Green - Super Bono 50% Acceso VIP</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <title>Casino Fortuna</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: 'Poppins', sans-serif;
-      /* Gradient from white to green */
-      background: linear-gradient(180deg, #ffffff 0%, #014d2c 100%);
-      color: #fff;
-      text-align: center;
-      min-height: 100vh;
+      background-image: url('fondo.jpg'); /* Reemplazá por tu imagen de fondo */
+      background-size: cover;
+      background-position: center;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      color: white;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      padding: 20px;
+      justify-content: start;
+      padding-top: 50px;
     }
-    .container {
-      max-width: 480px;
-      width: 100%;
-    }
-    .top-bar {
-      display: flex;
-      justify-content: space-between;
-      color: rgba(0, 255, 127, 0.6);
-      font-size: 0.8rem;
-      font-weight: 600;
-      font-family: 'Poppins', sans-serif;
-      margin-bottom: 15px;
-    }
-    .top-bar .item {
-      display: flex;
-      align-items: center;
-    }
-    .top-bar .icon {
-      margin-right: 5px;
-      font-size: 1rem;
-      color: rgba(0, 255, 127, 0.6);
-    }
+
     .logo {
-      width: 180px; /* 50% más grande */
-      height: auto; /* Mantener proporción */
-      margin: 0 auto 20px;
-      display: block;
-      border-radius: 50%; /* Redondear sin deformar */
-    }
-    .title-white {
-      font-size: 1.2rem;
-      font-weight: 700;
-      letter-spacing: 1px;
-      margin-bottom: 10px;
-      text-transform: uppercase;
-    }
-    .promo {
-      font-size: 2rem;
-      font-weight: 700;
-      color: #FFD62E;
-      line-height: 1.2;
-      margin-bottom: 8px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-    .promo-underline {
-      width: 60%;
-      height: 4px;
-      background-color: #FFD62E;
-      margin: 4px auto 20px;
-      border-radius: 2px;
-    }
-    .neon {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #00FF7F;
-      text-shadow: 0 0 8px #00FF7F, 0 0 16px #00FF7F;
+      width: 150px;
       margin-bottom: 20px;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      line-height: 1.2;
     }
-    .info-pill {
-      display: inline-block;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 10px 15px;
-      border-radius: 20px;
-      font-size: 0.9rem;
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      margin-bottom: 20px;
-      text-transform: uppercase;
+
+    .banner-img {
+      width: 90%; /* o un valor fijo si querés */
+      max-width: 600px;
+      margin-bottom: 60px;
     }
-    .btn {
-      display: inline-flex;
+
+    .boton-wsp {
+      background-color: #25D366;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 18px;
+      border-radius: 10px;
+      display: flex;
       align-items: center;
-      justify-content: center;
-      background: linear-gradient(90deg, #25D366, #128C7E);
-      color: #fff;
-      padding: 15px 25px;
-      border-radius: 30px;
-      font-size: 1rem;
-      font-weight: 700;
-      text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin-bottom: 20px;
-      animation: pulse 2s ease-in-out infinite;
+      gap: 10px;
+      cursor: pointer;
+      animation: pulse 1.8s infinite;
+      transition: transform 0.3s;
     }
-    .btn:hover {
-      transform: scale(1.08);
+
+    .boton-wsp:hover {
+      transform: scale(1.05);
     }
-    .btn svg {
-      width: 20px;
-      height: 20px;
-      margin-right: 10px;
-      fill: #fff;
-    }
+
     @keyframes pulse {
-      0%, 100% { transform: scale(1); }
-      50% { transform: scale(1.05); }
+      0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
+      70% { box-shadow: 0 0 10px 20px rgba(37, 211, 102, 0); }
+      100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+    }
+
+    .boton-wsp img {
+      width: 24px;
+      height: 24px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="top-bar">
-      <div class="item">Atención 24/7</div>
-      <div class="item">Pagos al instante</div>
-      <div class="item">Jugá responsable (+18)</div>
-    </div>
-    <img src="logo.jpg" alt="Red Green Logo" class="logo">
-    <div class="title-white">ACCESO VIP EXCLUSIVO</div>
-    <div class="promo">¡SUPER BONO DEL 50% EN TU PRIMER DEPOSITO!</div>
-    <div class="promo-underline"></div>
-    <div class="neon">ATENCION 24 HOR4S</div>
-    <div class="info-pill">ESCRIBINOS APRETANDO EL BOTON DE ABAJO</div>
-    <a href="https://wa.me/5493512181775" class="btn">
-      <svg viewBox="0 0 24 24"><path d="M16.24 14.01c-.27-.13-1.6-.79-1.84-.88-.24-.09-.42-.13-.6.13-.18.27-.7.88-.86 1.06-.16.18-.32.2-.6.07-.27-.13-1.14-.42-2.17-1.33-.8-.71-1.34-1.6-1.5-1.87-.16-.27-.02-.42.12-.55.12-.12.27-.32.4-.48.13-.16.18-.27.27-.45.09-.18.04-.34-.02-.48-.07-.13-.6-1.44-.82-1.98-.22-.52-.44-.45-.6-.46-.16-.01-.34-.01-.52-.01-.18 0-.48.07-.73.34-.24.27-.93.91-.93 2.22s.95 2.57 1.08 2.75c.13.18 1.87 2.86 4.53 4.01.63.27 1.12.43 1.5.55.63.19 1.2.16 1.65.1.5-.07 1.6-.65 1.83-1.28.23-.63.23-1.17.16-1.28-.07-.11[]."/></svg>
-      OBTENER MI BONUS AHORA
-    </a>
-  </div>
+  <img src="logo.png" alt="Logo del Casino" class="logo"> <!-- Reemplazá por tu logo -->
+
+  <img src="banner.png" alt="Banner Promocional" class="banner-img"> <!-- Reemplazá por tu banner PNG -->
+
+  <button class="boton-wsp" onclick="window.open('https://wa.me/549XXXXXXXXXX', '_blank')">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    Contactar
+  </button>
 </body>
 </html>
 
