--- a/index.html
+++ b/index.html
@@ -2,77 +2,69 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Casino Fortuna</title>
+  <title>Casino Profesional</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    *{margin:0;padding:0;box-sizing:border-box;}
     body {
-      background-image: url('fondo.jpg'); /* Reemplazá por tu imagen de fondo */
-      background-size: cover;
-      background-position: center;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
-      padding-top: 50px;
+      background: url('fondo.jpg') center/cover no-repeat;
+      font-family: 'Helvetica Neue', Arial, sans-serif;
+      color: #fff;
+      height:100vh;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      padding:20px;
     }
-
-    .logo {
-      width: 150px;
-      margin-bottom: 20px;
+    .overlay {
+      position:absolute;
+      inset:0;
+      background:rgba(0,50,20,0.6);
+      z-index:-1;
     }
-
+    .logo { width:140px; margin-bottom:20px; }
     .banner-img {
-      width: 90%; /* o un valor fijo si querés */
-      max-width: 600px;
-      margin-bottom: 60px;
+      max-width:600px;
+      width:90%;
+      margin-bottom:60px;
     }
-
-    .boton-wsp {
-      background-color: #25D366;
-      color: white;
-      border: none;
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      cursor: pointer;
-      animation: pulse 1.8s infinite;
-      transition: transform 0.3s;
+    .btn-contact {
+      background-color:#28a745;
+      color:#fff;
+      border:none;
+      padding:16px 32px;
+      font-size:20px;
+      border-radius:50px;
+      display:flex;
+      align-items:center;
+      gap:12px;
+      cursor:pointer;
+      animation: pulse 2s infinite;
+      transition:transform 0.3s, box-shadow 0.3s;
     }
-
-    .boton-wsp:hover {
-      transform: scale(1.05);
+    .btn-contact:hover{
+      transform:scale(1.05);
+      box-shadow:0 0 20px rgba(40,167,69,0.7);
     }
-
     @keyframes pulse {
-      0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
-      70% { box-shadow: 0 0 10px 20px rgba(37, 211, 102, 0); }
-      100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+      0%{box-shadow:0 0 0 0 rgba(40,167,69,0.7);}
+      70%{box-shadow:0 0 20px 10px rgba(40,167,69,0);}
+      100%{box-shadow:0 0 0 0 rgba(40,167,69,0);}
     }
-
-    .boton-wsp img {
-      width: 24px;
-      height: 24px;
+    .btn-contact img {
+      width:24px;
+      height:24px;
     }
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Logo del Casino" class="logo"> <!-- Reemplazá por tu logo -->
+  <div class="overlay"></div>
 
-  <img src="banner.png" alt="Banner Promocional" class="banner-img"> <!-- Reemplazá por tu banner PNG -->
+  <img src="logo.png" alt="Logo Casino" class="logo">
+  <img src="banner.png" alt="Banner promoción" class="banner-img">
 
-  <button class="boton-wsp" onclick="window.open('https://wa.me/549XXXXXXXXXX', '_blank')">
+  <button class="btn-contact" onclick="window.open('https://wa.me/549XXXXXXXXXX','_blank')">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     Contactar
   </button>
